tests/NormalTests/paczka1/small_fuzzy/51819584.err
Error in line 2: lYwYy S291 13,6
Error in line 6: 8j02xL S666 54,4
